# cpp-app-template

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
.spell/: words.txt
cmake/: GitDeps.cmake  KayahrDeps.cmake
src/: app.cpp
test/: app.test.cpp
